<resources>
    <string name="app_name">RecentGames</string>

    <!-- Games -->
    <string name="menu_search">Search</string>
    <string name="loading_error">Loading error</string>
    <string name="reload">Reload</string>

    <!--GameDetails-->

    <string name="platforms">Platforms</string>
    <string name="genres">Genres: </string>
    <string name="release_date">Release date: </string>
    <string name="rating">Rating: </string>
    <string name="reviews">Reviews</string>
    <string name="similar_games">Similar games</string>
    <string name="images">Images</string>


    <!--Search-->
    <string name="enter_name_game">Enter the name of the game</string>
    <string name="game_not_found">Game with name %s not found</string>

</resources>
