<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".screen.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_layout_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:titleEnabled="false"
            app:toolbarId="@+id/toolbar"
            tools:ignore="InconsistentLayout">

            <ImageView
                android:id="@+id/poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                tools:ignore="contentDescription"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/contentPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchor="@+id/app_bar"
        app:layout_anchorGravity="bottom"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:id="@+id/description_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/game_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#10000000"
                            android:padding="@dimen/padding_medium"
                            android:textSize="@dimen/text.28"/>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/platforms"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/padding_medium"
                                android:text="@string/platforms"
                                android:textSize="@dimen/text.18"/>

                            <LinearLayout
                                android:id="@+id/platforms_container"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/margin_medium"
                                android:layout_marginTop="@dimen/margin_medium"
                                android:orientation="horizontal"/>
                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingBottom="@dimen/padding_medium"
                            android:paddingTop="@dimen/padding_medium">

                            <TextView
                                android:id="@+id/genres"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="@dimen/padding_medium"
                                android:paddingRight="@dimen/padding_medium"
                                android:text="@string/genres"
                                android:textSize="@dimen/text.18"/>

                            <TextView
                                android:id="@+id/genres_container"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:paddingRight="@dimen/padding_medium"
                                android:textColor="@color/colorPrimary"
                                android:textSize="@dimen/text.18"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingBottom="@dimen/padding_medium"
                            android:paddingTop="@dimen/padding_medium">

                            <TextView
                                android:id="@+id/release_date_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="@dimen/padding_medium"
                                android:paddingRight="@dimen/padding_medium"
                                android:text="@string/release_date"
                                android:textSize="@dimen/text.18"/>

                            <TextView
                                android:id="@+id/release_date"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:paddingRight="@dimen/padding_medium"
                                android:textColor="@color/colorPrimary"
                                android:textSize="@dimen/text.18"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingBottom="@dimen/padding_medium"
                            android:paddingTop="@dimen/padding_medium">

                            <TextView
                                android:id="@+id/rating_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="@dimen/padding_medium"
                                android:paddingRight="@dimen/padding_medium"
                                android:text="@string/release_date"
                                android:textSize="@dimen/text.18"/>

                            <TextView
                                android:id="@+id/rating"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:paddingRight="@dimen/padding_medium"
                                android:textColor="@color/colorPrimary"
                                android:textSize="@dimen/text.18"/>

                        </LinearLayout>

                        <TextView
                            android:id="@+id/deck"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/padding_medium"
                            android:textSize="@dimen/text.18"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/images_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/padding_medium"
                            android:text="@string/images"
                            android:textSize="@dimen/text.18"/>

                        <com.pixplicity.multiviewpager.MultiViewPager
                            android:id="@+id/images"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:paddingBottom="@dimen/padding_medium"
                            app:matchChildWidth="@+id/image"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/similar_games_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/padding_medium"
                            android:text="@string/similar_games"
                            android:textSize="@dimen/text.18"/>

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/similar_games"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/reviews_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_medium">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/padding_medium"
                            android:text="@string/reviews"
                            android:textSize="@dimen/text.18"/>

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/review_list"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center_horizontal"
                android:layout_margin="@dimen/margin_medium"
                android:visibility="gone"/>

        </FrameLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>